# GlucTool

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.rst  CHANGES.rst  LICENSE.rst  LICENSE.txt  README.md  README.rst  blood_glucose_conversion.py  blood_sugar_conversion.py  gluc_tool.py  gluc_tool_1.0  gluc_tool_2.0  gluc_tool_2.0.py  gluctool.py  improved_glucose.py  pyproject.toml  requirements.txt  setup.py  test_gluc_tool_2.0.py
GlucTool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gluctool/: .travis.yml  __init__.py  gluctool.py  refactor.py  tests.py
src/gluctool/: __init__.py  gluctool.py
tests/: context.py  conv_table.py  derp.py  export_to_csv.py  generate_conversion_rows.py  gluctool.py  gluctool_test.py  gluctool_tests.py  interactive_mode.py  parse_cli_args.py  test_convert_mg_to_mmol.py  test_convert_mmol_to_mg.py  test_gluctool.py  test_menu.py  test_user_float.py  unittests.py
