[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gluctool"
version = "0.0.2"
description = "Convert blood glucose levels between mmol/l and mg/dl."
readme = "README.rst"
authors = [
    {name = "marshki", email = "marshall@morethantomorrow.org"},
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gluctool"] 

[project.scripts]
gluctool = "gluctool.gluctool:main"
